[gd_scene load_steps=8 format=3 uid="uid://b80pj476agmj5"]

[ext_resource type="Script" path="res://components/scripts/door_component.gd" id="1_8456v"]
[ext_resource type="Texture2D" uid="uid://d02vgi11br6dk" path="res://terrain/assets/interior/wooden_door_b.png" id="1_iix7i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bcmod"]
size = Vector2(24, 9)

[sub_resource type="Animation" id="Animation_6qjmv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7ppl5"]
resource_name = "close"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_15u3v"]
resource_name = "open"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8j5x3"]
_data = {
"RESET": SubResource("Animation_6qjmv"),
"close": SubResource("Animation_7ppl5"),
"open": SubResource("Animation_15u3v")
}

[node name="DoorComponent" type="Area2D" node_paths=PackedStringArray("_animation")]
z_index = 2
script = ExtResource("1_8456v")
_animation = NodePath("Animation")

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("1_iix7i")
hframes = 2

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 13)
shape = SubResource("RectangleShape2D_bcmod")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8j5x3")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
